# CW7FL

./: .gitignore  CMakeLists.txt
CW7FL/: CMakeLists.txt  Calculator.cpp  Calculator.h  mainwindow.cpp  mainwindow.h
Test/: CMakeLists.txt  Tests.cpp  Tests.h  main.cpp  tst_inittest.cpp
Test/Cases/: README.txt  test_Addition.h  test_Init.h
Test/Cases/Addition/: Addition.cpp  Addition.h
Test/Cases/Division/: Division.cpp  Division.h
Test/Cases/Modulo/: Modulo_tests.cpp  Modulo_tests.h
Test/Cases/Multiplication/: Multiplication.cpp  Multiplication.h
Test/Cases/Subtraction/: Subtraction.cpp  Subtraction.h
Test/Cases/and_tests/: And_tests.cpp  And_tests.h
Test/Cases/not_tests/: not_tests.cpp  not_tests.h
Test/Cases/or_tests/: Or_tests.cpp  Or_tests.h
Test/Cases/xor_tests/: Xor_tests.cpp  Xor_tests.h
TestRunner/: CMakeLists.txt  TestLoader.cpp  TestLoader.h  mainwindow.cpp  mainwindow.h
